--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
@@ -50,17 +52,24 @@
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
 
-      <nav id="navbar" class="navbar">
+      <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Cruises</a></li>
-          <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
+          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
+          <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
+
+      <div class="header-social-links d-flex align-items-center">
+        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      </div>
 
     </div>
   </header><!-- End Header -->
@@ -78,16 +87,28 @@
         <div class="row content">
           <div class="col-lg-12">
             <p>
-              Embark on the voyage of a lifetime with Cruise Everywhere! cruises, where luxury meets adventure on the high seas. Our state-of-the-art cruise ships offer unparalleled comfort and elegance, featuring world-class dining, exhilarating entertainment, and serene wellness retreats. Each journey is meticulously crafted to provide breathtaking excursions and unforgettable experiences at exotic destinations. From sun-soaked Caribbean beaches to the majestic fjords of Alaska, Cruise Everywhere! ensures every moment on board is filled with indulgence and discovery. Sail with us and discover a world where your dreams set sail.
+              Embark on the voyage of a lifetime with Cruise Everywhere! cruises, where luxury meets adventure on the
+              high seas. Our state-of-the-art cruise ships offer unparalleled comfort and elegance, featuring
+              world-class dining, exhilarating entertainment, and serene wellness retreats. Each journey is meticulously
+              crafted to provide breathtaking excursions and unforgettable experiences at exotic destinations. From
+              sun-soaked Caribbean beaches to the majestic fjords of Alaska, Cruise Everywhere! ensures every moment on
+              board is filled with indulgence and discovery. Sail with us and discover a world where your dreams set
+              sail.
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i> Fleet Size: 15 state-of-the-art cruise ships</li>
-              <li><i class="ri-check-double-line"></i> Passenger Capacity: Ranges from 1,500 to 5,000 passengers per ship</li>
-              <li><i class="ri-check-double-line"></i> Crew Members: Approximately 1,200 crew members per ship, ensuring a high crew-to-passenger ratio for personalized service</li>
-              <li><i class="ri-check-double-line"></i> Destinations: Over 100 global destinations including the Caribbean, Mediterranean, Northern Europe, Alaska, Australia, and Mexico</li>
-              <li><i class="ri-check-double-line"></i> Dining Options: Over 20 diverse dining venues per ship, including Michelin-starred chef collaborations and themed specialty restaurants</li>
-              <li><i class="ri-check-double-line"></i> Entertainment: Multiple theaters and live performance venues with Broadway-style shows, concerts, and comedy acts</li>
-              <li><i class="ri-check-double-line"></i> Wellness Facilities: Full-service spas, fitness centers, yoga studios, and wellness programs</li>
+              <li><i class="ri-check-double-line"></i> Passenger Capacity: Ranges from 1,500 to 5,000 passengers per
+                ship</li>
+              <li><i class="ri-check-double-line"></i> Crew Members: Approximately 1,200 crew members per ship, ensuring
+                a high crew-to-passenger ratio for personalized service</li>
+              <li><i class="ri-check-double-line"></i> Destinations: Over 100 global destinations including the
+                Caribbean, Mediterranean, Northern Europe, Alaska, Australia, and Mexico</li>
+              <li><i class="ri-check-double-line"></i> Dining Options: Over 20 diverse dining venues per ship, including
+                Michelin-starred chef collaborations and themed specialty restaurants</li>
+              <li><i class="ri-check-double-line"></i> Entertainment: Multiple theaters and live performance venues with
+                Broadway-style shows, concerts, and comedy acts</li>
+              <li><i class="ri-check-double-line"></i> Wellness Facilities: Full-service spas, fitness centers, yoga
+                studios, and wellness programs</li>
             </ul>
           </div>
         </div>
@@ -101,7 +122,8 @@
 
         <div class="section-title">
           <h2>Cruises</h2>
-          <p>You're about to discover just what awaits you on a Cruise Everywhere cruise. Start by exploring the incredible ports we visit and the fun things to do, both on the ship and ashore.</p>
+          <p>You're about to discover just what awaits you on a Cruise Everywhere cruise. Start by exploring the
+            incredible ports we visit and the fun things to do, both on the ship and ashore.</p>
         </div>
 
         <div class="row">
@@ -109,7 +131,10 @@
             <div class="icon-box">
               <div class="icon"><i class="bi bi-brightness-high"></i></div>
               <h4 class="title"><a href="">Caribbean</a></h4>
-              <p class="description">With more than 5,000 islands and cays spread across this amazing region, there's a lot of paradise to see. The mild climate means it doesn't matter what time of year you visit. A Caribbean cruise takes you to some of the coolest little hotspots… stretching across the world's designated hotspot.</p>
+              <p class="description">With more than 5,000 islands and cays spread across this amazing region, there's a
+                lot of paradise to see. The mild climate means it doesn't matter what time of year you visit. A
+                Caribbean cruise takes you to some of the coolest little hotspots… stretching across the world's
+                designated hotspot.</p>
             </div>
           </div>
 
@@ -117,7 +142,10 @@
             <div class="icon-box">
               <div class="icon"><i class="bi bi-water"></i></div>
               <h4 class="title"><a href="">The Bahamas</a></h4>
-              <p class="description">The Bahamas to truly appreciate this classic cruise destination. On this 700-strong string of sun-splashed islands dotting the blue Atlantic, the living's easy. Enjoy sailing, snorkeling, strolling pearly pink-sand beaches, and swimming through crystalline turquoise seas on a Bahamas cruise.</p>
+              <p class="description">The Bahamas to truly appreciate this classic cruise destination. On this 700-strong
+                string of sun-splashed islands dotting the blue Atlantic, the living's easy. Enjoy sailing, snorkeling,
+                strolling pearly pink-sand beaches, and swimming through crystalline turquoise seas on a Bahamas cruise.
+              </p>
             </div>
           </div>
 
@@ -125,7 +153,9 @@
             <div class="icon-box">
               <div class="icon"><i class="bi bi-signpost-2"></i></div>
               <h4 class="title"><a href="">Mexico</a></h4>
-              <p class="description">Whether your Mexico cruise style is west-coast Riviera with its Pacific charm, east-coast Caribbean and its island mojo… or perhaps Baja and its out-of-this-world coastal scenery, you'll find Mexico central to a great vacation.</p>
+              <p class="description">Whether your Mexico cruise style is west-coast Riviera with its Pacific charm,
+                east-coast Caribbean and its island mojo… or perhaps Baja and its out-of-this-world coastal scenery,
+                you'll find Mexico central to a great vacation.</p>
             </div>
           </div>
         </div>
@@ -135,7 +165,10 @@
             <div class="icon-box">
               <div class="icon"><i class="bi bi-sunrise"></i></div>
               <h4 class="title"><a href="">Australia</a></h4>
-              <p class="description">Whether you're after a quick getaway, or a longer holiday you'll remember forever, an Australian cruise holiday with amazing shore excursions is a great way to relax and take some time out. Excursions fit every lifestyle whether snorkelling the world's largest reef system, relaxint on Airlie Beach, or indulging in the foodie tastes of Tasmania.</p>
+              <p class="description">Whether you're after a quick getaway, or a longer holiday you'll remember forever,
+                an Australian cruise holiday with amazing shore excursions is a great way to relax and take some time
+                out. Excursions fit every lifestyle whether snorkelling the world's largest reef system, relaxint on
+                Airlie Beach, or indulging in the foodie tastes of Tasmania.</p>
             </div>
           </div>
 
@@ -143,7 +176,10 @@
             <div class="icon-box">
               <div class="icon"><i class="bi bi-binoculars"></i></div>
               <h4 class="title"><a href="">Europe</a></h4>
-              <p class="description">Few places in the world pack in as much culture per square meter as Europe does. There's so much variety across the continent and its islands, you have options for experiencing many of these places by sea. Western Europe cruises visit the region from which the explorers of the New World kicked off their voyages.</p>
+              <p class="description">Few places in the world pack in as much culture per square meter as Europe does.
+                There's so much variety across the continent and its islands, you have options for experiencing many of
+                these places by sea. Western Europe cruises visit the region from which the explorers of the New World
+                kicked off their voyages.</p>
             </div>
           </div>
 
@@ -151,7 +187,11 @@
             <div class="icon-box">
               <div class="icon"><i class="bi bi-snow"></i></div>
               <h4 class="title"><a href="">Alaska</a></h4>
-              <p class="description">If you're looking for a cruise vacation that's a little bit out of the way and a little bit out of the ordinary, make an Alaska cruise your first choice. Alaska is a natural wonder through and through, and the coastal panhandle region is perhaps the most stunning. Cruising Alaska will also give you a first-row ticket to the best of nature — including fjords, wildlife and mountains galore.</p>
+              <p class="description">If you're looking for a cruise vacation that's a little bit out of the way and a
+                little bit out of the ordinary, make an Alaska cruise your first choice. Alaska is a natural wonder
+                through and through, and the coastal panhandle region is perhaps the most stunning. Cruising Alaska will
+                also give you a first-row ticket to the best of nature — including fjords, wildlife and mountains
+                galore.</p>
             </div>
           </div>
         </div>
@@ -165,7 +205,8 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Check out some of the amazing views that can be experienced on any of the the fascinating cruising excursions!</p>
+          <p>Check out some of the amazing views that can be experienced on any of the the fascinating cruising
+            excursions!</p>
         </div>
 
         <div class="row portfolio-container">
@@ -174,7 +215,8 @@
             <div class="portfolio-info">
               <h4>Caribbean</h4>
               <p>Mahogany Bay</p>
-              <a href="assets/img/caribbean.avif" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Caribbean"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/caribbean.avif" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Caribbean"><i class="bx bx-plus"></i></a>
             </div>
           </div>
 
@@ -183,7 +225,8 @@
             <div class="portfolio-info">
               <h4>Bahamas</h4>
               <p>Half Moon Cay</p>
-              <a href="assets/img/bahamas-half-moon-cay.avif" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Bahamas"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/bahamas-half-moon-cay.avif" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Bahamas"><i class="bx bx-plus"></i></a>
             </div>
           </div>
 
@@ -192,7 +235,8 @@
             <div class="portfolio-info">
               <h4>Mexico</h4>
               <p>Cabo San Lucas</p>
-              <a href="assets/img/cabo.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Mexico"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/cabo.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link"
+                title="Mexico"><i class="bx bx-plus"></i></a>
             </div>
           </div>
 
@@ -201,7 +245,8 @@
             <div class="portfolio-info">
               <h4>Australia</h4>
               <p>Cairns</p>
-              <a href="assets/img/cairns.avif" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Australia"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/cairns.avif" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link"
+                title="Australia"><i class="bx bx-plus"></i></a>
             </div>
           </div>
 
@@ -210,7 +255,8 @@
             <div class="portfolio-info">
               <h4>Europe</h4>
               <p>Dublin, Ireland</p>
-              <a href="assets/img/europe-port-dublin.avif" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Europe"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/europe-port-dublin.avif" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Europe"><i class="bx bx-plus"></i></a>
             </div>
           </div>
 
@@ -219,7 +265,8 @@
             <div class="portfolio-info">
               <h4>Europe</h4>
               <p>Naples, Italy</p>
-              <a href="assets/img/europe-naples.avif" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Europe"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/europe-naples.avif" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Europe"><i class="bx bx-plus"></i></a>
             </div>
           </div>
 
@@ -228,7 +275,8 @@
             <div class="portfolio-info">
               <h4>Alaska</h4>
               <p>Juneau</p>
-              <a href="assets/img/alaska-juneau.avif" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Alaska"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/alaska-juneau.avif" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Alaska"><i class="bx bx-plus"></i></a>
             </div>
           </div>
 
@@ -237,7 +285,8 @@
             <div class="portfolio-info">
               <h4>Australia</h4>
               <p>Melbourne</p>
-              <a href="assets/img/melbourne.avif" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Australia"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/melbourne.avif" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Australia"><i class="bx bx-plus"></i></a>
             </div>
           </div>
 
@@ -246,7 +295,8 @@
             <div class="portfolio-info">
               <h4>Alaska</h4>
               <p>Endicott Arm Fjord</p>
-              <a href="assets/img/alaska-endicott-arm-fjord.avif" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Alaska"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/alaska-endicott-arm-fjord.avif" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Alaska"><i class="bx bx-plus"></i></a>
             </div>
           </div>
         </div>
@@ -363,7 +413,8 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Ready to schedule your next cruising adventure? Send us a message and we will be in touch as soon as possible!</p>
+          <p>Ready to schedule your next cruising adventure? Send us a message and we will be in touch as soon as
+            possible!</p>
         </div>
 
         <div class="row">
@@ -432,7 +483,8 @@
     </div>
   </footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
