Fix about section list

--- a/src/index.html
+++ b/src/index.html
@@ -95,22 +95,19 @@
               board is filled with indulgence and discovery. Sail with us and discover a world where your dreams set
               sail.
             </p>
-            <ul>
-              <li><i class="ri-check-double-line"></i> Fleet Size: 15 state-of-the-art cruise ships</li>
-              <li><i class="ri-check-double-line"></i> Passenger Capacity: Ranges from 1,500 to 5,000 passengers per
-                ship</li>
-              <li><i class="ri-check-double-line"></i> Crew Members: Approximately 1,200 crew members per ship, ensuring
-                a high crew-to-passenger ratio for personalized service</li>
-              <li><i class="ri-check-double-line"></i> Destinations: Over 100 global destinations including the
-                Caribbean, Mediterranean, Northern Europe, Alaska, Australia, and Mexico</li>
-              <li><i class="ri-check-double-line"></i> Dining Options: Over 20 diverse dining venues per ship, including
-                Michelin-starred chef collaborations and themed specialty restaurants</li>
-              <li><i class="ri-check-double-line"></i> Entertainment: Multiple theaters and live performance venues with
-                Broadway-style shows, concerts, and comedy acts</li>
-              <li><i class="ri-check-double-line"></i> Wellness Facilities: Full-service spas, fitness centers, yoga
-                studios, and wellness programs</li>
-            </ul>
           </div>
+
+           <div class="row content">
+          <ul>
+            <li><i class="ri-check-double-line"></i> <strong>Fleet Size</strong>: 15 state-of-the-art cruise ships</li>
+            <li><i class="ri-check-double-line"></i> <strong>Passenger Capacity</strong>: Ranges from 1,500 to 5,000 passengers per ship</li>
+            <li><i class="ri-check-double-line"></i> <strong>Crew Members</strong>: Approximately 1,200 crew members per ship, ensuring a high crew-to-passenger ratio for personalized service</li>
+            <li><i class="ri-check-double-line"></i> <strong>Destinations</strong>: Over 100 global destinations including the Caribbean, Mediterranean, Northern Europe, Alaska, Australia, and Mexico</li>
+            <li><i class="ri-check-double-line"></i> <strong>Dining Options</strong>: Over 20 diverse dining venues per ship, including Michelin- starred chef collaborations and themed specialty restaurants</li>
+            <li><i class="ri-check-double-line"></i> <strong>Entertainment</strong>: Multiple theaters and live performance venues with Broadway-style shows, concerts, and comedy acts</li>
+            <li><i class="ri-check-double-line"></i> <strong>Wellness Facilities</strong>: Full-service spas, fitness centers, yoga studios, and wellness programs</li>
+          </ul>
+        </div>
         </div>
 
       </div>
