Fix pricing section

--- a/src/index.html
+++ b/src/index.html
@@ -97,17 +97,24 @@
             </p>
           </div>
 
-           <div class="row content">
-          <ul>
-            <li><i class="ri-check-double-line"></i> <strong>Fleet Size</strong>: 15 state-of-the-art cruise ships</li>
-            <li><i class="ri-check-double-line"></i> <strong>Passenger Capacity</strong>: Ranges from 1,500 to 5,000 passengers per ship</li>
-            <li><i class="ri-check-double-line"></i> <strong>Crew Members</strong>: Approximately 1,200 crew members per ship, ensuring a high crew-to-passenger ratio for personalized service</li>
-            <li><i class="ri-check-double-line"></i> <strong>Destinations</strong>: Over 100 global destinations including the Caribbean, Mediterranean, Northern Europe, Alaska, Australia, and Mexico</li>
-            <li><i class="ri-check-double-line"></i> <strong>Dining Options</strong>: Over 20 diverse dining venues per ship, including Michelin- starred chef collaborations and themed specialty restaurants</li>
-            <li><i class="ri-check-double-line"></i> <strong>Entertainment</strong>: Multiple theaters and live performance venues with Broadway-style shows, concerts, and comedy acts</li>
-            <li><i class="ri-check-double-line"></i> <strong>Wellness Facilities</strong>: Full-service spas, fitness centers, yoga studios, and wellness programs</li>
-          </ul>
-        </div>
+          <div class="row content">
+            <ul>
+              <li><i class="ri-check-double-line"></i> <strong>Fleet Size</strong>: 15 state-of-the-art cruise ships
+              </li>
+              <li><i class="ri-check-double-line"></i> <strong>Passenger Capacity</strong>: Ranges from 1,500 to 5,000
+                passengers per ship</li>
+              <li><i class="ri-check-double-line"></i> <strong>Crew Members</strong>: Approximately 1,200 crew members
+                per ship, ensuring a high crew-to-passenger ratio for personalized service</li>
+              <li><i class="ri-check-double-line"></i> <strong>Destinations</strong>: Over 100 global destinations
+                including the Caribbean, Mediterranean, Northern Europe, Alaska, Australia, and Mexico</li>
+              <li><i class="ri-check-double-line"></i> <strong>Dining Options</strong>: Over 20 diverse dining venues
+                per ship, including Michelin- starred chef collaborations and themed specialty restaurants</li>
+              <li><i class="ri-check-double-line"></i> <strong>Entertainment</strong>: Multiple theaters and live
+                performance venues with Broadway-style shows, concerts, and comedy acts</li>
+              <li><i class="ri-check-double-line"></i> <strong>Wellness Facilities</strong>: Full-service spas, fitness
+                centers, yoga studios, and wellness programs</li>
+            </ul>
+          </div>
         </div>
 
       </div>
@@ -119,8 +126,8 @@
 
         <div class="section-title">
           <h2>Cruises</h2>
-          <p>You're about to discover just what awaits you on a Cruise Everywhere cruise. Start by exploring the
-            incredible ports we visit and the fun things to do, both on the ship and ashore.</p>
+          <p style="text-align:center">You're about to discover just what awaits you on a Cruise Everywhere cruise.<br>
+            Start by exploring the incredible ports we visit and the fun things to do, both on the ship and ashore.</p>
         </div>
 
         <div class="row">
@@ -195,6 +202,94 @@
 
       </div>
     </section><!-- End Services Section -->
+
+    <!-- ======= Pricing Section ======= -->
+    <section id="pricing" class="pricing">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Pricing</h2>
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-4 col-md-6">
+            <div class="box">
+              <h3 style="text-align: center;">Caribbean</h3>
+              <h4 style="text-align: center;"><sup>$</sup>1500 <span> / 7 days</span></h4>
+              <ul>
+                <li>Snorkel great natural reefs in crystal-clear waters</li>
+                <li>Enjoy year-round tropical weather</li>
+                <li>Enjoy a beach view on horseback or beach chair</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="box">
+              <h3 style="text-align: center;">The Bahamas</h3>
+              <h4 style="text-align: center;"><sup>$</sup>800 <span> / 4 days</span></h4>
+              <ul>
+                <li>Swim and splash in sparkling waters</li>
+                <li>Taste the private destination life on Half Moon Cay and Princess Cays</li>
+                <li>Explore the expansive Atlantis resort</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="box">
+              <h3 style="text-align: center;">Mexico</h3>
+              <h4 style="text-align: center;"><sup>$</sup>950 <span> / 5 days</span></h4>
+              <ul>
+                <li>Check out the shopping scene for unique local crafts</li>
+                <li>Fly high — with a view — while parasailing</li>
+                <li>Get down to scuba and snuba</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="box">
+              <h3 style="text-align: center;">Australia</h3>
+              <h4 style="text-align: center;"><sup>$</sup>2300 <span> / 10 days</span></h4>
+              <ul>
+                <li>Snorkel the world’s largest reef system</li>
+                <li>Indulging in the foodie tastes of Tasmania</li>
+                <li>Soak up the Aussie sun in the Whitsundays or relax on Airlie Beach</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="box">
+              <h3 style="text-align: center;">Europe</h3>
+              <h4 style="text-align: center;"><sup>$</sup>1700 <span> / 8 days</span></h4>
+              <ul>
+                <li>See some of nature’s most dramatic landscapes</li>
+                <li>Explore historical buildings, ruins and cathedrals that are older than many countries</li>
+                <li>Check out museums and statues</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="box">
+              <h3 style="text-align: center;">Alaska</h3>
+              <h4 style="text-align: center;"><sup>$</sup>1400 <span> / 7 days</span></h4>
+              <ul>
+                <li>Get up and go glacier-gazing, big time</li>
+                <li>Follow hiking trails to catch some grand scenery</li>
+                <li>Grab binoculars and whale-watch some big ones</li>
+              </ul>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+    <!-- End Pricing Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
@@ -301,108 +396,6 @@
       </div>
     </section><!-- End Portfolio Section -->
 
-    <!-- ======= Pricing Section ======= -->
-    <section id="pricing" class="pricing">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Pricing</h2>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-4 col-md-6">
-            <div class="box">
-              <h3>Caribbean</h3>
-              <h4><sup>$</sup>1500<span> / 7 days</span></h4>
-              <ul>
-                <li>Snorkel great natural reefs in crystal-clear waters</li>
-                <li>Enjoy year-round tropical weather</li>
-                <li>Enjoy a beach view on horseback or beach chair</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="#" class="btn-buy">Book Now</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
-            <div class="box">
-              <h3>The Bahamas</h3>
-              <h4><sup>$</sup>800<span> / 4 days</span></h4>
-              <ul>
-                <li>Swim and splash in sparkling waters</li>
-                <li>Taste the private destination life on Half Moon Cay and Princess Cays</li>
-                <li>Explore the expansive Atlantis resort</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="#" class="btn-buy">Book Now</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
-            <div class="box">
-              <h3>Mexico</h3>
-              <h4><sup>$</sup>950<span> / 5 days</span></h4>
-              <ul>
-                <li>Check out the shopping scene for unique local crafts</li>
-                <li>Fly high — with a view — while parasailing</li>
-                <li>Get down to scuba and snuba</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="#" class="btn-buy">Book Now</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mt-4">
-            <div class="box">
-              <h3>Australia</h3>
-              <h4><sup>$</sup>2300<span> / 10 days</span></h4>
-              <ul>
-                <li>Snorkel the world's largest reef system</li>
-                <li>Indulging in the foodie tastes of Tasmania</li>
-                <li>Soak up the Aussie sun in the Whitsundays or relax on Airlie Beach</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="#" class="btn-buy">Book Now</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mt-4">
-            <div class="box">
-              <h3>Europe</h3>
-              <h4><sup>$</sup>1700<span> / 8 days</span></h4>
-              <ul>
-                <li>See some of nature's most dramatic landscapes</li>
-                <li>Explore historical buildings, ruins and cathedrals that are older than many countries</li>
-                <li>Check out museums and statues</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="#" class="btn-buy">Book Now</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mt-4">
-            <div class="box">
-              <h3>Alaska</h3>
-              <h4><sup>$</sup>1400<span> / 7 days</span></h4>
-              <ul>
-                <li>Get up and go glacier-gazing, big time</li>
-                <li>Follow hiking trails to catch some grand scenery</li>
-                <li>Grab binoculars and whale-watch some big ones</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="#" class="btn-buy">Book Now</a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End Pricing Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
