Fix portfolio section

--- a/src/index.html
+++ b/src/index.html
@@ -291,110 +291,122 @@
     </section>
     <!-- End Pricing Section -->
 
-    <!-- ======= Portfolio Section ======= -->
+     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
       <div class="container">
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Check out some of the amazing views that can be experienced on any of the the fascinating cruising
-            excursions!</p>
+          <p></p>
         </div>
 
         <div class="row portfolio-container">
-          <div class="col-lg-4 col-md-6 portfolio-item">
-            <img src="assets/img/caribbean.avif" class="img-fluid" alt="">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-img"><img src="img/caribbean.avif" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Caribbean</h4>
               <p>Mahogany Bay</p>
-              <a href="assets/img/caribbean.avif" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="Caribbean"><i class="bx bx-plus"></i></a>
+              <a href="img/caribbean.avif" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link"
+                title="Caribbean"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item">
-            <img src="assets/img/bahamas-half-moon-cay.avif" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-img"><img src="img/bahamas-half-moon-cay.avif" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Bahamas</h4>
               <p>Half Moon Cay</p>
-              <a href="assets/img/bahamas-half-moon-cay.avif" data-gallery="portfolioGallery"
+              <a href="img/bahamas-half-moon-cay.avif" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Bahamas"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item">
-            <img src="assets/img/cabo.jpg" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-img"><img src="img/cabo.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Mexico</h4>
               <p>Cabo San Lucas</p>
-              <a href="assets/img/cabo.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link"
+              <a href="img/cabo.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link"
                 title="Mexico"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item">
-            <img src="assets/img/cairns.avif" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-img"><img src="img/cairns.avif" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Australia</h4>
               <p>Cairns</p>
-              <a href="assets/img/cairns.avif" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link"
+              <a href="img/cairns.avif" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link"
                 title="Australia"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item">
-            <img src="assets/img/europe-port-dublin.avif" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-img"><img src="img/europe-port-dublin.avif" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Europe</h4>
               <p>Dublin, Ireland</p>
-              <a href="assets/img/europe-port-dublin.avif" data-gallery="portfolioGallery"
+              <a href="img/europe-port-dublin.avif" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Europe"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item">
-            <img src="assets/img/europe-naples.avif" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-img"><img src="img/europe-naples.avif" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Europe</h4>
               <p>Naples, Italy</p>
-              <a href="assets/img/europe-naples.avif" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="Europe"><i class="bx bx-plus"></i></a>
+              <a href="img/europe-naples.avif" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link"
+                title="Europe"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item">
-            <img src="assets/img/alaska-juneau.avif" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-img"><img src="img/alaska-juneau.avif" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Alaska</h4>
               <p>Juneau</p>
-              <a href="assets/img/alaska-juneau.avif" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="Alaska"><i class="bx bx-plus"></i></a>
+              <a href="img/alaska-juneau.avif" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link"
+                title="Alaska"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item">
-            <img src="assets/img/melbourne.avif" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-img"><img src="img/melbourne.avif" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Australia</h4>
               <p>Melbourne</p>
-              <a href="assets/img/melbourne.avif" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="Australia"><i class="bx bx-plus"></i></a>
+              <a href="img/melbourne.avif" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link"
+                title="Melbourne"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item">
-            <img src="assets/img/alaska-endicott-arm-fjord.avif" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-img"><img src="img/alaska-endicott-arm-fjord.avif" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Alaska</h4>
               <p>Endicott Arm Fjord</p>
-              <a href="assets/img/alaska-endicott-arm-fjord.avif" data-gallery="portfolioGallery"
+              <a href="img/alaska-endicott-arm-fjord.avif" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Alaska"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
+
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section>
+    <!-- End Portfolio Section -->
+
 
 
     <!-- ======= Contact Section ======= -->
