--- a/src/index.html
+++ b/src/index.html
@@ -408,18 +408,18 @@
     <!-- End Portfolio Section -->
 
 
-
-    <!-- ======= Contact Section ======= -->
+     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Ready to schedule your next cruising adventure? Send us a message and we will be in touch as soon as
-            possible!</p>
+          <p style="text-align: center;">Ready to schedule your next cruising adventure? Send us a message and we will
+            be in touch as soon as possible!</p>
         </div>
 
-        <div class="row">
+        <div class="row mt-5">
+
           <div class="col-lg-4">
             <div class="info">
               <div class="address">
@@ -439,11 +439,14 @@
                 <h4>Call:</h4>
                 <p>+1 407-888-4757</p>
               </div>
+
             </div>
+
           </div>
 
           <div class="col-lg-8 mt-5 mt-lg-0">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+
+            <form action="forms/contact.php" method="post" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -465,11 +468,14 @@
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
+
           </div>
+
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section>
+    <!-- End Contact Section -->
 
   </main><!-- End #main -->
 
